objects/ACE_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is For ACE Custom Settings</description>
    <fields>
        <fullName>ApprovalDays__c</fullName>
        <label>ApprovalDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchName__c</fullName>
        <label>BatchName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Quarter__c</fullName>
        <description>Tracks the Current Active Quarter</description>
        <label>Current Quarter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_URL__c</fullName>
        <defaultValue>&quot;https://officedepot--uat.cs7.my.salesforce.com&quot;</defaultValue>
        <label>Domain URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Escalation_time_frame__c</fullName>
        <label>Escalation time frame</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EsclationDays__c</fullName>
        <label>EsclationDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Days__c</fullName>
        <label>Expiry Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level1Access__c</fullName>
        <description>Level1Access</description>
        <label>Level1Access</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2Access__c</fullName>
        <description>Level2Access</description>
        <label>Level2Access</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level3Access__c</fullName>
        <description>Level3Access</description>
        <label>Level3Access</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LevelXAccess__c</fullName>
        <label>LevelXAccess</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Object_ID__c</fullName>
        <label>Max Object ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Object_ID__c</fullName>
        <label>Minimum Object ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PendingApprovalDays__c</fullName>
        <label>PendingApprovalDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Window__c</fullName>
        <label>Processing Window (In Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Batch_End_Date__c</fullName>
        <label>Site Batch End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Batch_Start_Date__c</fullName>
        <label>Site Batch Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Url__c</fullName>
        <label>Tab Url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_By_Pass_All__c</fullName>
        <label>Trigger By Pass All</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_By_Pass__c</fullName>
        <description>List of 15 digit User IDs, trigger logic would be bypassed for this list of users.</description>
        <label>Trigger By Pass</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendavo_Update_End_Date__c</fullName>
        <description>Vendavo Update End Date</description>
        <label>Vendavo Update End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendavo_Update_Start_Date__c</fullName>
        <description>Vendavo Update Start Date</description>
        <label>Vendavo Update Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>batchsize__c</fullName>
        <label>batchsize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>extid__c</fullName>
        <externalId>true</externalId>
        <label>extid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ACE_Settings</label>
</CustomObject>